fix: Adjust media query breakpoint for navbar visibility

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -83,7 +83,7 @@ header {
     display: none;
 }
 
-@media screen and (max-width: 1190px) {
+@media screen and (max-width: 1160px) {
     
     #nav_list, #navbar .btn-default {
         display: none;
